# mcap_query_backend

./: .gitignore  API_DOCUMENTATION.md  CELERY_SETUP.md  FRONTEND_INTEGRATION.md  README.md  compose.yml  pyproject.toml
backend/: db.sqlite3
backend/api/: mcap_converter.py  models.py  parser.py  serializers.py  tasks.py  views.py
backend/api/migrations/: 0001_initial.py  0002_mcaplog_captured_at_mcaplog_channel_count_and_more.py  0003_mcaplog_recovery_status.py  0004_car_driver_eventtype_mcaplog_notes_mcaplog_car_and_more.py  0008_remove_mcaplog_location.py  0009_mcaplog_file_size.py  0010_mcaplog_parse_task_id.py
backend/backend/: celery.py  settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/ui/: button.tsx  card.tsx  dialog.tsx  input.tsx  textarea.tsx
scripts/: dev_local.sh
