[project]
name = "mcap-query-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "mcap-protobuf-support>=0.5.3",
    "psycopg2-binary>=2.9.11",
    "drf-yasg>=1.21.7",
]
